# agent-blueprints

./: .gitignore  .gitmessage  .markdownlint-cli2.yaml  .markdownlint.yml  .markdownlintignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PATTERNS_CATALOG_SCHEMA.md  README.md  ROADMAP.md  SECURITY.md  architectures.html  blueprints.html  index.html  intro.html  package.json  patterns-catalog.yaml  patterns.html  pnpm-lock.yaml  pyproject.toml  sitemap.xml  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: blueprint-proposal.yml  bug-report.yml
.github/workflows/: catalog-drift.yml  ci.yml  cli-publish.yml  deploy-site.yml  docs.yml  external-link-check.yml  lint.yml  notify-deployments.yml
architectures/code-review/: README.md
assets/css/: styles.cc6d7eee.css
assets/js/: 0e384e19.9adacaa5.js  0e384e19.c8f303e8.js  0e384e19.caa17ee1.js  0e384e19.d5ac864a.js  1203.e7e43625.js  165.ff7aabb1.js  1741.626a0c07.js  1746.283193c3.js  17896441.68bbdb53.js  1903.a6c10da6.js  2130.3645c581.js  2130.76607cf5.js  2217.72d1c82c.js  2237.19825a52.js  225.721b9fa2.js  2291.35c6380e.js  22dd74f7.be81b790.js  2334.06ef28a6.js  2492.81d28ffc.js  2821.bf57e65f.js  291.197a2cb7.js  3356.dd4edfa4.js  3815.6d8761c0.js  4312.b6162ac4.js  4616.36ef49f0.js  4732.ea6b8d03.js  4802.9d7542b2.js  4981.e8709e1b.js  5149.13e3a250.js  5480.43df08ee.js  5955.c1384926.js  5996.317e7217.js  5e95c892.af9d6dac.js  6241.ea899c64.js  6567.33eb457f.js  6992.f2ad919d.js  7592.4311d5e9.js  7873.3974e43f.js  7928.aeaef151.js  8142.b0f024e8.js  (+35 more)
blueprints/: manifest.json
blueprints/01-react-agent/: README.md
blueprints/02-plan-and-execute/: README.md  docker-compose.yml
blueprints/04-multi-agent-supervisor/: README.md
blueprints/04-multi-agent-supervisor/python/: pyproject.toml
blueprints/04-multi-agent-supervisor/python/src/: agents.py  supervisor.py
blueprints/04-multi-agent-supervisor/python/tests/: test_supervisor.py
blueprints/07-rag-basic/python/: pyproject.toml
blueprints/07-rag-basic/python/data/: sample.md
blueprints/07-rag-basic/python/src/: ingestion.py  main.py  rag_chain.py  retrieval.py
blueprints/07-rag-basic/python/tests/: test_rag.py
cli/: package.json
cli/src/: index.ts
code/: README.md
composition/: README.md  anti-compositions.md  blueprints-to-deployments.md  reference-architectures.md
core/: architecture.md  design.md  flow.md  implementation.md  overview.md
core/spec/: example.yaml  ir.schema.json
foundations/: README.md  agent-protocols.md  anatomy-of-an-agent.md  anti-patterns.md  choosing-a-pattern.md  cost-and-model-selection.md  durability-and-state.md  evals-and-quality.md  frameworks-and-integrations.md  hallucination-and-grounding.md  observability-and-tracing.md  sandboxed-execution.md  security-and-safety.md  system-design-heritage.md  testing-strategies.md
legacy/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ci.yml  docs.yml
legacy/blueprints/01-react-agent/python/: pyproject.toml
legacy/blueprints/01-react-agent/python/src/: __init__.py  main.py  tools.py
legacy/blueprints/01-react-agent/python/tests/: __init__.py  test_agent.py
legacy/cli/: package.json  tsconfig.json
legacy/scripts/: check-identity-links.mjs  check-markdown-links.mjs  sync-from-manifest.mjs
legacy/website/: docusaurus.config.ts  package.json  sidebars.ts
meta/: HOW_TO_ADD_AN_ENTRY.md  changelog.md  contributing.md  generate-docs.js  generate-website-data.js  roadmap.md  style-guide.md  taxonomy.schema.json  validate-metadata.js
modifiers/: README.md
modifiers/guardrails/: architecture.md  design.md  flow.md  implementation.md  integration.md  overview.md
modifiers/human_in_the_loop/: architecture.md  design.md  flow.md  implementation.md  overview.md
patterns/: README.md
patterns/agentic_rag/: architecture.md  design.md  flow.md  implementation.md  overview.md
patterns/evaluator-optimizer/: architecture.md  design.md  flow.md  implementation.md  overview.md
patterns/event-driven/: cost-and-latency.md  design.md  evolution.md  implementation.md  metadata.json  observability.md  overview.md
patterns/event_driven/: architecture.md  design.md  flow.md  implementation.md  overview.md
patterns/human-in-the-loop/: design.md  metadata.json  overview.md
patterns/human_in_the_loop/: evolution.md  metadata.json
patterns/long_horizon/: architecture.md  design.md  flow.md  implementation.md  observability.md  overview.md
patterns/memory/: design.md  implementation.md  in-context.md  metadata.json  overview.md
patterns/multi-agent/: debate-critique.md  design.md  implementation.md  metadata.json  overview.md  parallel.md  supervisor.md
patterns/multi_agent/: architecture.md  design.md  flow.md  implementation.md  metadata.json  overview.md
patterns/orchestration/: lats.md  plan-execute.md  reflexion.md
patterns/orchestrator-worker/: architecture.md  design.md  flow.md  implementation.md  overview.md
patterns/parallel-calls/: architecture.md  design.md  flow.md  implementation.md  overview.md
patterns/plan-and-execute/: design.md  implementation.md  metadata.json  overview.md
patterns/plan_and_execute/: architecture.md  design.md  flow.md  implementation.md  metadata.json  overview.md
patterns/prompt-chaining/: architecture.md  design.md  flow.md  implementation.md  overview.md
patterns/rag/: architecture.md  design.md  flow.md  implementation.md  metadata.json  overview.md
patterns/react/: architecture.md  design.md  flow.md  implementation.md  metadata.json  overview.md
patterns/reflection/: architecture.md  cost-and-latency.md  design.md  flow.md  implementation.md  overview.md  (+1 more)
primitives/: README.md
scripts/: check-identity-links.mjs  check-manifest-consistency.mjs  cli-smoke-test.mjs  sync-from-manifest.mjs
tests/: test_code_conventions.py  test_ir_schema.py  test_pattern_code_runtime.py  test_schemas_importable.py
website/: astro.config.mjs  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tailwind.config.mjs  tsconfig.json
workflows/: README.md
(+281 files in other folders)
