[project]
name = "react-agent-blueprint"
version = "0.1.0"
description = "Blueprint 01: ReAct (Reasoning + Acting) Agent using Anthropic Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
react-agent = "src.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.uv.scripts]
dev = "python src/main.py"
test = "pytest tests/ -v"
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
typecheck = "mypy src/"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
